// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserView snapshot tests should match snapshot 1`] = `
<Fragment>
  <styled.div>
    <UsersList />
    <Pagination
      getData={[Function]}
      pagesPerSlide={5}
      selector={[Function]}
      setData={[Function]}
    />
  </styled.div>
  <Form
    action={[Function]}
    placeholder="Search users"
    resetState={[Function]}
    selector={[Function]}
  />
</Fragment>
`;

exports[`UserView snapshot tests should match snapshot with error 1`] = `
<Fragment>
  <styled.div>
    <UsersList />
    <Pagination
      getData={[Function]}
      pagesPerSlide={5}
      selector={[Function]}
      setData={[Function]}
    />
    <div
      data-testid="error"
    >
      Unavailable
    </div>
  </styled.div>
  <Form
    action={[Function]}
    placeholder="Search users"
    resetState={[Function]}
    selector={[Function]}
  />
</Fragment>
`;

exports[`UserView snapshot tests should match snapshot with loading request 1`] = `
<Fragment>
  <styled.div>
    <UsersList />
    <Pagination
      getData={[Function]}
      pagesPerSlide={5}
      selector={[Function]}
      setData={[Function]}
    />
  </styled.div>
  <Form
    action={[Function]}
    placeholder="Search users"
    resetState={[Function]}
    selector={[Function]}
  />
</Fragment>
`;
